Fix(AtividadeIntegral): Correção da verificação do estado da unidade

--- a/public/configuracao_conteudo.json
+++ b/public/configuracao_conteudo.json
@@ -447,7 +447,7 @@
                                 "valor": "0"
                             },
                             {
-                                "alternativa": "Morte de um personagem.",
+                                "alternativa": "Personagem fazendo uso de produto da marca.",
                                 "chave": "2",
                                 "valor": "1"
                             },
