--- a/public/configuracao_conteudo.json
+++ b/public/configuracao_conteudo.json
@@ -18,7 +18,7 @@
         "atividades": [
             {
                 "identificador": "atividade_1_decomposicao",
-                "nomeAtividade": "Atividades Avaliativas",
+                "nomeAtividade": "Diagnose Médica",
                 "questoes": [
                     {
                         "tipoQuestaoString": "INTEGRAL",
@@ -56,7 +56,7 @@
             },
             {
                 "identificador": "atividade_2_decomposicao",
-                "nomeAtividade": "Atividades Avaliativas",
+                "nomeAtividade": "Organizando um evento escolar",
                 "questoes": [
                     {
                         "tipoQuestaoString": "INTEGRAL",
@@ -213,12 +213,12 @@
         "atividades": [
             {
                 "identificador": "atividade_1_reconhecimento_de_padroes",
-                "nomeAtividade": "Atividades Avaliativas",
+                "nomeAtividade": "O estranho",
                 "questoes": [
                     {
                         "tipoQuestaoString": "INTEGRAL",
                         "identificador": "q1_a1_reconhecimento_de_padroes",
-                        "enunciado": "A1. Passeando pelo centro de uma cidade conhecida, digamos, o Rio de Janeiro, você se depara com um aglomerado de pessoas. De repente um desconhecido estabelece uma conversa com você, buscando também entender o que está acontecendo. Essa conversa segue, levantando hipóteses e trocando opiniões, quando percebem que já se passaram uns 30 minutos e se despedem sem descobrirem o motivo da aglomeração. Pensando na conversa com o estranho, você se dá conta que o mesmo não parecia ser carioca nato ou criado no Rio. Motivado pela curiosidade, você tenta reconhecer em qual estado aquela pessoa teria nascido e/ou sido criada. Qual, dentre os elementos a seguir, seria o menos provável de estabelecer um padrão adequado a tal propósito?",
+                        "enunciado": "Passeando pelo centro de uma cidade conhecida, digamos, o Rio de Janeiro, você se depara com um aglomerado de pessoas. De repente um desconhecido estabelece uma conversa com você, buscando também entender o que está acontecendo. Essa conversa segue, levantando hipóteses e trocando opiniões, quando percebem que já se passaram uns 30 minutos e se despedem sem descobrirem o motivo da aglomeração. Pensando na conversa com o estranho, você se dá conta que o mesmo não parecia ser carioca nato ou criado no Rio. Motivado pela curiosidade, você tenta reconhecer em qual estado aquela pessoa teria nascido e/ou sido criada. Qual, dentre os elementos a seguir, seria o menos provável de estabelecer um padrão adequado a tal propósito?",
                         "gabaritos": [
                             {
                                 "alternativa": "Sotaque.",
@@ -251,44 +251,50 @@
             },
             {
                 "identificador": "atividade_2_reconhecimento_de_padroes",
-                "nomeAtividade": "Atividades Avaliativas",
+                "nomeAtividade": "Profissão",
                 "questoes": [
                     {
                         "tipoQuestaoString": "INTEGRAL",
                         "identificador": "q1_a2_reconhecimento_de_padroes",
-                        "enunciado": "A2. Pense em alguma vez que você ou alguém próximo adoeceu e a natureza da enfermidade foi sugerida e confirmada posteriormente por diagnóstico médico. Em contexto similar, diga qual, dentre os elementos a seguir, seria o menos provável de auxiliar a estabelecer um padrão adequado a tal propósito.",
+                        "enunciado": "Considere o propósito de identificar a profissão do desconhecido dentro da mesma situação da atividade A1 acima. Qual, dentre os elementos a seguir, seria o menos provável de estabelecer um padrão adequado a tal propósito? ",
                         "gabaritos": [
                             {
-                                "alternativa": "Histórico de doenças.",
+                                "alternativa": "Curso formal na área.",
                                 "chave": "1",
                                 "valor": "0"
                             },
                             {
-                                "alternativa": "Pele e cabelo limpos.",
+                                "alternativa": "Marca do celular usado.",
                                 "chave": "2",
                                 "valor": "1"
                             },
                             {
-                                "alternativa": "Mudança involuntária de comportamento (apetite, por exemplo).",
+                                "alternativa": "Habilidades sociais.",
                                 "chave": "3",
                                 "valor": "0"
                             },
                             {
-                                "alternativa": "Dores no corpo.",
+                                "alternativa": "Local de estágio.",
                                 "chave": "4",
                                 "valor": "0"
                             },
                             {
-                                "alternativa": "Alterações físicas (febre, vômito, diarréia, etc).",
+                                "alternativa": "Uso de fardamento no dia a dia.",
                                 "chave": "5",
                                 "valor": "0"
                             }
                         ]
-                    },
+                    }
+                ]
+            },
+            {
+                "identificador": "atividade_3_reconhecimento_de_padroes",
+                "nomeAtividade": "Peixe fresco",
+                "questoes": [
                     {
                         "tipoQuestaoString": "INTEGRAL",
-                        "identificador": "q2_a2_reconhecimento_de_padroes",
-                        "enunciado": "A3. Num mercado, determinar se o peixe está de fato fresco envolve analisar se cada exemplar está em conformidade com certos elementos, como os mencionados a seguir. Qual, dentre os aspectos abaixo, parece menos provável de caracterizar a frescura de um certo pescado?",
+                        "identificador": "q1_a3_reconhecimento_de_padroes",
+                        "enunciado": "Num mercado, determinar se o peixe está de fato fresco envolve analisar se cada exemplar está em conformidade com certos elementos, como os mencionados a seguir. Qual, dentre os aspectos abaixo, parece menos provável de caracterizar a frescura de um certo pescado?",
                         "gabaritos": [
                             {
                                 "alternativa": "Cor dos olhos.",
@@ -316,11 +322,17 @@
                                 "valor": "0"
                             }
                         ]
-                    },
+                    }
+                ]
+            },
+            {
+                "identificador": "atividade_4_reconhecimento_de_padroes",
+                "nomeAtividade": "Final da telenovela",
+                "questoes": [
                     {
                         "tipoQuestaoString": "INTEGRAL",
-                        "identificador": "q3_a2_reconhecimento_de_padroes",
-                        "enunciado": "A4. Considere que uma telenovela que você acompanha aproxima-se dos capítulos finais. Você, como vários de seus conhecidos, tentam prever como será o final da mesma e discutem entre si as possibilidades de desfecho, baseados nos acontecimentos dos capítulos anteriores. Considere qual, dentre os acontecimentos de capítulos recentes, seria o menos provável de ter impacto direto no final da novela:",
+                        "identificador": "q1_a4_reconhecimento_de_padroes",
+                        "enunciado": "Num mercado, determinar se o peixe está de fato fresco envolve analisar se cada exemplar está em conformidade com certos elementos, como os mencionados a seguir. Qual, dentre os aspectos abaixo, parece menos provável de caracterizar a frescura de um certo pescado?",
                         "gabaritos": [
                             {
                                 "alternativa": "Morte de um personagem.",
@@ -348,34 +360,40 @@
                                 "valor": "0"
                             }
                         ]
-                    },
+                    }
+                ]
+            },
+            {
+                "identificador": "atividade_5_reconhecimento_de_padroes",
+                "nomeAtividade": "Final da telenovela",
+                "questoes": [
                     {
                         "tipoQuestaoString": "INTEGRAL",
-                        "identificador": "q4_a2_reconhecimento_de_padroes",
-                        "enunciado": "A5. Retomando ao cenário da Atividade Avaliativa A1, considere o propósito de identificar a profissão do desconhecido. Qual, dentre os elementos a seguir, seria o menos provável de estabelecer um padrão adequado a tal propósito?",
+                        "identificador": "q1_a5_reconhecimento_de_padroes",
+                        "enunciado": "Num mercado, determinar se o peixe está de fato fresco envolve analisar se cada exemplar está em conformidade com certos elementos, como os mencionados a seguir. Qual, dentre os aspectos abaixo, parece menos provável de caracterizar a frescura de um certo pescado?",
                         "gabaritos": [
                             {
-                                "alternativa": "Curso formal na área.",
+                                "alternativa": "Histórico de doenças.",
                                 "chave": "1",
                                 "valor": "0"
                             },
                             {
-                                "alternativa": "Marca do celular usado.",
+                                "alternativa": "Pele e cabelo limpos.",
                                 "chave": "2",
                                 "valor": "1"
                             },
                             {
-                                "alternativa": "Habilidades sociais.",
+                                "alternativa": "Mudança involuntária de comportamento (apetite, por exemplo).",
                                 "chave": "3",
                                 "valor": "0"
                             },
                             {
-                                "alternativa": "Local de estágio.",
+                                "alternativa": "Dores no corpo.",
                                 "chave": "4",
                                 "valor": "0"
                             },
                             {
-                                "alternativa": "Uso de fardamento no dia a dia.",
+                                "alternativa": "Alterações físicas (febre, vômito, diarréia, etc).",
                                 "chave": "5",
                                 "valor": "0"
                             }
