FIx(Conclusao): Adição da unidade no arquivo de conclusão

--- a/public/configuracao_conteudo.json
+++ b/public/configuracao_conteudo.json
@@ -663,5 +663,14 @@
                 ]
             }
         ]
+    },
+    {
+        "identificador": "conclusao",
+        "nome": "Conclusão",
+        "descricao": "",
+        "permitePorcentagem": "true",
+        "identificadorPai": "",
+        "topicos": [],
+        "atividades": []
     }
 ]
